iou-app/objects/Apex_Class__c/Apex_Class__c.object-meta.xml
<CustomObject>
    <description>Apex Class records are used to quantitatively measure and report on the quality of design, non-functional requirements, and architecture of class files.</description>
    <label>Apex Class</label>
    <nameField>
        <label>Apex Class</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>