iou-app/objects/Apex_Class__c/fields/Bad_Practices__c.field-meta.xml
<CustomField>
    <fullName>Bad_Practices__c</fullName>
    <description>The total count of Bad Practice violations. See the documentation for the mapping of PMD Rules to Bad Practice in &quot;Level 0 Tech Debt Ruleset&quot;</description>
    <inlineHelpText>The total count of Bad Practice violations. See the documentation for the mapping of PMD Rules to Bad Practice in &quot;Level 0 Tech Debt Ruleset&quot;</inlineHelpText>
    <label>Bad Practices</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>