iou-app/objects/Apex_Class__c/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <description>Add some notes on why the work on the class is obstructed.</description>
    <label>Blocked Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>