iou-app/objects/Apex_Class__c/fields/Code_Coverage_Improvement_Points__c.field-meta.xml
<CustomField>
    <fullName>Code_Coverage_Improvement_Points__c</fullName>
    <description>Used for success metric reporting. Calculates the increase in code coverage percentage points.</description>
    <formula>Current_Code_Coverage__c - Starting_Code_Coverage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Coverage Improvement Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>