iou-app/objects/Apex_Class__c/fields/Code_Smells__c.field-meta.xml
<CustomField>
    <fullName>Code_Smells__c</fullName>
    <description>The total count of Code Smell violations. See the documentation for the mapping of PMD Rules to Code Smells in &quot;Level 0 Tech Debt Ruleset&quot;</description>
    <inlineHelpText>The total count of Code Smell violations. See the documentation for the mapping of PMD Rules to Code Smells in &quot;Level 0 Tech Debt Ruleset&quot;</inlineHelpText>
    <label>Code Smells</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>