iou-app/objects/Apex_Class__c/fields/Cognitive_Complexity_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Cognitive_Complexity_Improvement__c</fullName>
    <description>Used for reporting on success metrics. Calculates the increase in understandability and maintainability.</description>
    <formula>Starting_Cost_to_Change_Test__c - Current_Cost_to_Change_Test__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cognitive Complexity Improvement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>