iou-app/objects/Apex_Class__c/fields/Cost_to_Change_Test__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Change_Test__c</fullName>
    <description>The total count of Cost to Change &amp; Test violations. See the documentation for the mapping of PMD Rules to Cost to Change &amp; Test in &quot;Level 0 Tech Debt Ruleset&quot;</description>
    <inlineHelpText>The total count of Cost to Change &amp; Test violations. See the documentation for the mapping of PMD Rules to Cost to Change &amp; Test in &quot;Level 0 Tech Debt Ruleset&quot;</inlineHelpText>
    <label>Cost to Change &amp; Test</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>