iou-app/objects/Apex_Class__c/fields/Cost_to_Understand_Maintain__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Understand_Maintain__c</fullName>
    <description>The total count of Cost to Understand &amp; Maintain violations. See the documentation for the mapping of PMD Rules to Cost to Understand &amp; Maintain in &quot;Level 0 Tech Debt Ruleset&quot;</description>
    <inlineHelpText>The total count of Cost to Understand &amp; Maintain violations. See the documentation for the mapping of PMD Rules to Cost to Understand &amp; Maintain in &quot;Level 0 Tech Debt Ruleset&quot;</inlineHelpText>
    <label>Cost to Understand &amp; Maintain</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>