iou-app/objects/Apex_Class__c/fields/Current_Bad_Practices__c.field-meta.xml
<CustomField>
    <fullName>Current_Bad_Practices__c</fullName>
    <description>Counts the current number of bad practice violations still not resolved.</description>
    <label>Current Bad Practices</label>
    <summaryFilterItems>
        <field>Apex_Violation__c.Is_Resolved__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Apex_Violation__c.Category__c</field>
        <operation>equals</operation>
        <value>Bad Practice</value>
    </summaryFilterItems>
    <summaryForeignKey>Apex_Violation__c.Apex_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>