iou-app/objects/Apex_Class__c/fields/Current_Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Current_Code_Coverage__c</fullName>
    <description>The percentage of code coverage as this class is improved.</description>
    <inlineHelpText>The percentage of code coverage as this class is improved.</inlineHelpText>
    <label>Current Code Coverage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>