iou-app/objects/Apex_Class__c/fields/Current_Code_Smells__c.field-meta.xml
<CustomField>
    <fullName>Current_Code_Smells__c</fullName>
    <description>Counts the number of code smell violations not yet resolved.</description>
    <label>Current Code Smells</label>
    <summaryFilterItems>
        <field>Apex_Violation__c.Is_Resolved__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Apex_Violation__c.Category__c</field>
        <operation>equals</operation>
        <value>Code Smell</value>
    </summaryFilterItems>
    <summaryForeignKey>Apex_Violation__c.Apex_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>