iou-app/objects/Apex_Class__c/fields/Current_Ineffectual_Tests__c.field-meta.xml
<CustomField>
    <fullName>Current_Ineffectual_Tests__c</fullName>
    <description>Totals the number of tests without assertion violations not yet resolved.</description>
    <label>Current Ineffectual Tests</label>
    <summaryFilterItems>
        <field>Apex_Violation__c.Is_Resolved__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Apex_Violation__c.Category__c</field>
        <operation>equals</operation>
        <value>Ineffectual Tests</value>
    </summaryFilterItems>
    <summaryForeignKey>Apex_Violation__c.Apex_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>