iou-app/objects/Apex_Class__c/fields/Current_Violation_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Violation_Count__c</fullName>
    <description>Calculated by summing all unresolved violations.</description>
    <formula>Current_Bad_Practices__c +
 Current_Code_Smells__c +
 Current_Cost_to_Change_Test__c +
 Current_Cost_to_Understand_Maintain__c +
 Current_Ineffectual_Tests__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Violation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>