iou-app/objects/Apex_Class__c/fields/File_Length__c.field-meta.xml
<CustomField>
    <fullName>File_Length__c</fullName>
    <description>This is only calculated when the class has a Cognitive Complexity violation. It is used to understand the weight of the violation.</description>
    <label>File Length</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>