iou-app/objects/Apex_Class__c/fields/Has_Trigger_Logic__c.field-meta.xml
<CustomField>
    <fullName>Has_Trigger_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This class handles, helps, or provides service during trigger execution. Use this field to mark all classes involved in trigger automation, which then provides a scope for refactoring trigger code.</description>
    <label>Has Trigger Logic</label>
    <type>Checkbox</type>
</CustomField>