iou-app/objects/Apex_Class__c/fields/In_Scope__c.field-meta.xml
<CustomField>
    <fullName>In_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags a class for refactoring. This field imparts a sense of priority: when checked, it is included in the scope of a refactoring effort.</description>
    <label>In Scope</label>
    <type>Checkbox</type>
</CustomField>