iou-app/objects/Apex_Class__c/fields/Ineffectual_Tests__c.field-meta.xml
<CustomField>
    <fullName>Ineffectual_Tests__c</fullName>
    <description>The number of test methods that do not have asserts. Tests of these sorts are not only not helpful, but dangerous as well.</description>
    <label>Ineffectual Tests</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>