iou-app/objects/Apex_Class__c/fields/Is_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Is_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Work on this class is impeded by an obstacle.</description>
    <label>Is Blocked</label>
    <type>Checkbox</type>
</CustomField>