iou-app/objects/Apex_Class__c/fields/Related_Test_Suites__c.field-meta.xml
<CustomField>
    <fullName>Related_Test_Suites__c</fullName>
    <description>List test suites that contain this class</description>
    <inlineHelpText>List test suites that contain this class</inlineHelpText>
    <label>Related Test Suites</label>
    <type>TextArea</type>
</CustomField>