iou-app/objects/Apex_Class__c/fields/Resolved_Violations__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Violations__c</fullName>
    <description>Used for reporting on success metrics. Calculates the reduction of violation-based tech debt.</description>
    <formula>Starting_Violation_Count__c - Current_Violation_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolved Violations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>