iou-app/objects/Apex_Class__c/fields/SOC_Level__c.field-meta.xml
<CustomField>
    <fullName>SOC_Level__c</fullName>
    <description>The Separation of Concerns level for this class. It represents the level of refactoring currently achieved.</description>
    <label>SOC Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 0</fullName>
                <default>true</default>
                <label>Level 0</label>
            </value>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>