iou-app/objects/Apex_Class__c/fields/Starting_Bad_Practices__c.field-meta.xml
<CustomField>
    <fullName>Starting_Bad_Practices__c</fullName>
    <description>Counts the original number of bad practice violations, disregarding if they have been resolved or not. Provided as a benchmark.</description>
    <label>Starting Bad Practices</label>
    <summaryFilterItems>
        <field>Apex_Violation__c.Category__c</field>
        <operation>equals</operation>
        <value>Bad Practice</value>
    </summaryFilterItems>
    <summaryForeignKey>Apex_Violation__c.Apex_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>