iou-app/objects/Apex_Class__c/fields/Starting_Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Starting_Code_Coverage__c</fullName>
    <description>The percentage of code coverage before this class was improved.</description>
    <inlineHelpText>The percentage of code coverage before this class was improved.</inlineHelpText>
    <label>Starting Code Coverage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>