iou-app/objects/Apex_Class__c/fields/Starting_Code_Smells__c.field-meta.xml
<CustomField>
    <fullName>Starting_Code_Smells__c</fullName>
    <description>Counts the original number of code smell violations, disregarding if they have been resolved or not. Provided as a benchmark.</description>
    <label>Starting Code Smells</label>
    <summaryFilterItems>
        <field>Apex_Violation__c.Category__c</field>
        <operation>equals</operation>
        <value>Code Smell</value>
    </summaryFilterItems>
    <summaryForeignKey>Apex_Violation__c.Apex_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>