iou-app/objects/Apex_Class__c/fields/Starting_Cost_to_Change_Test__c.field-meta.xml
<CustomField>
    <fullName>Starting_Cost_to_Change_Test__c</fullName>
    <description>Uses the read only field on Apex Violation to benchmark the starting point for Cyclomatic Complexity violations.</description>
    <label>Starting Cost to Change &amp; Test</label>
    <summarizedField>Apex_Violation__c.Starting_Complexity_Score__c</summarizedField>
    <summaryFilterItems>
        <field>Apex_Violation__c.Category__c</field>
        <operation>equals</operation>
        <value>Cost to Change &amp; Test</value>
    </summaryFilterItems>
    <summaryForeignKey>Apex_Violation__c.Apex_Class__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>