iou-app/objects/Apex_Class__c/fields/Starting_Ineffectual_Tests__c.field-meta.xml
<CustomField>
    <fullName>Starting_Ineffectual_Tests__c</fullName>
    <description>Counts the original number of ineffectual test violations, disregarding if they have been resolved or not. Provided as a benchmark.</description>
    <label>Starting Ineffectual Tests</label>
    <summaryFilterItems>
        <field>Apex_Violation__c.Category__c</field>
        <operation>equals</operation>
        <value>Ineffectual Tests</value>
    </summaryFilterItems>
    <summaryForeignKey>Apex_Violation__c.Apex_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>