iou-app/objects/Apex_Class__c/fields/Starting_Violation_Count__c.field-meta.xml
<CustomField>
    <fullName>Starting_Violation_Count__c</fullName>
    <description>The total count of violations before this class was improved. Derived by adding Code Smells, Bad Practices, Cost to Change &amp; Test, Cost to Understand &amp; Maintain, and Ineffectual Tests at the time of initialization.</description>
    <inlineHelpText>The total count of violations before this class was improved. Derived by adding Code Smells, Bad Practices, Cost to Change &amp; Test, Cost to Understand &amp; Maintain, and Ineffectual Tests at the time of initialization.</inlineHelpText>
    <label>Starting Violation Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>