iou-app/objects/Apex_Class__c/fields/Test_Class__c.field-meta.xml
<CustomField>
    <fullName>Test_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary test class that covers this Apex.</description>
    <inlineHelpText>The primary test class that covers this Apex.</inlineHelpText>
    <label>Test Class</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Apex_Class__c.Name</field>
            <operation>contains</operation>
            <value>Test</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Apex_Class__c</referenceTo>
    <relationshipLabel>Test Classes</relationshipLabel>
    <relationshipName>Test_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>