iou-app/objects/Apex_Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SOC_Level__c</columns>
    <columns>Current_Violation_Count__c</columns>
    <columns>Resolved_Violations__c</columns>
    <columns>Test_Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>