iou-app/objects/Apex_Class__c/listViews/Most_Wanted.listView-meta.xml
<ListView>
    <fullName>Most_Wanted</fullName>
    <columns>NAME</columns>
    <columns>SOC_Level__c</columns>
    <columns>Current_Violation_Count__c</columns>
    <columns>Resolved_Violations__c</columns>
    <columns>Test_Class__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Cost_to_Understand_Maintain__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>SOC_Level__c</field>
        <operation>equals</operation>
        <value>Level 0</value>
    </filters>
    <label>IOU Most Wanted</label>
</ListView>