iou-app/objects/Apex_Class__c/listViews/Trigger_Audit_View.listView-meta.xml
<ListView>
    <fullName>Trigger_Audit_View</fullName>
    <columns>NAME</columns>
    <columns>Has_Trigger_Logic__c</columns>
    <columns>Starting_Violation_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Has_Trigger_Logic__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Trigger Audit View</label>
</ListView>